log
ju., 12 de may. de 2022 17:02:19: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
 tests:  2|4
total_score: 15/70
949c4b2
ju., 12 de may. de 2022 17:03:39: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:71:5: error: too many arguments to function 'puts'
     puts("%d--------",k);
     ^~~~
In file included from test.c:1:0:
c:\mingw\include\stdio.h:677:41: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  int    puts (const char *);
                                         ^~~~
Compilation failed
b99ab12
ju., 12 de may. de 2022 17:04:01: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4d79056
ju., 12 de may. de 2022 17:10:51: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8711df5
ju., 12 de may. de 2022 17:12:15: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
11b8799
ju., 12 de may. de 2022 17:13:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c4dad80
ju., 12 de may. de 2022 18:37:06: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:17: error: unused variable 'p' [-Werror=unused-variable]
   int i,j,sub,k,p,cont1=0,cont2=0;
                 ^
sudoku.c:48:11: error: unused variable 'sub' [-Werror=unused-variable]
   int i,j,sub,k,p,cont1=0,cont2=0;
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
51c935f
ju., 12 de may. de 2022 18:38:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:13: error: unused variable 'p' [-Werror=unused-variable]
   int i,j,k,p,cont1=0,cont2=0;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
d4fbfc9
ju., 12 de may. de 2022 18:39:37: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  2|4
total_score: 15/70
fac08e0
ju., 12 de may. de 2022 18:45:38: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2d49a63
ju., 12 de may. de 2022 18:50:13: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'print_node':
sudoku.c:39:8: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
        for(j=0;j<9;j++)
        ^~~
sudoku.c:41:11: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
           printf("%d ", n->sudo[i][j]);
           ^~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:54:13: error: unused variable 'j' [-Werror=unused-variable]
         int j=3*(sub%3) + (p%3) ;
             ^
sudoku.c:53:13: error: unused variable 'i' [-Werror=unused-variable]
         int i=3*(sub/3) + (p/3) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
898c5c3
ju., 12 de may. de 2022 18:53:08: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'print_node':
sudoku.c:39:8: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
        for(j=0;j<9;j++)
        ^~~
sudoku.c:41:11: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
           printf("%d ", n->sudo[i][j]);
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6aabd78
ju., 12 de may. de 2022 18:54:11: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
698eff9
ju., 12 de may. de 2022 18:55:15: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
ea39e5d
ju., 12 de may. de 2022 18:56:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2e74e42
ju., 12 de may. de 2022 18:56:59: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9505afb
ju., 12 de may. de 2022 18:58:10: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
210aaa0
ju., 12 de may. de 2022 18:59:37: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
cdea33b
ju., 12 de may. de 2022 19:00:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2e2215c
ju., 12 de may. de 2022 19:01:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9617133
ju., 12 de may. de 2022 19:01:43: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ec512ba
ju., 12 de may. de 2022 19:02:45: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
34899f4
ju., 12 de may. de 2022 19:03:04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
208c842
ju., 12 de may. de 2022 19:04:20: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ae591f8
ju., 12 de may. de 2022 19:14:33: 
 sudoku.c | 23 +++++++++++++++--------
 1 file changed, 15 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:51:18: error: unused variable 'j' [-Werror=unused-variable]
   int numero,k,i,j,p;
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
0b5b700
ju., 12 de may. de 2022 19:15:11: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
e5344a1
ju., 12 de may. de 2022 19:16:11: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
027c31e
ju., 12 de may. de 2022 19:20:09: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
639c20a
ju., 12 de may. de 2022 19:20:28: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b75ea47
ju., 12 de may. de 2022 19:27:13: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0f33ddc
ju., 12 de may. de 2022 19:27:52: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
67d1467
ju., 12 de may. de 2022 19:31:25: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
4f13cf3
ju., 12 de may. de 2022 19:31:56: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2dcdbb2
ju., 12 de may. de 2022 19:35:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
632506f
ju., 12 de may. de 2022 19:36:49: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
50981a1
ju., 12 de may. de 2022 19:37:30: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
985b83b
ju., 12 de may. de 2022 19:37:51: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
21b4466
ju., 12 de may. de 2022 20:03:31: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:121:13: error: void value not ignored as it ought to be
     Node* n=pop(S);
             ^~~
Compilation failed
0d9ba74
ju., 12 de may. de 2022 20:06:27: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:121:5: error: invalid use of void expression
     Node* n=(Node*)pop(S);
     ^~~~
Compilation failed
6c24198
ju., 12 de may. de 2022 20:08:41: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:121:13: error: void value not ignored as it ought to be
     Node* n=pop(S);
             ^~~
Compilation failed
36e9c6f
